feat-complete-example: add payment with Scope

--- a/pinpad/hub-core-pinpad-complete-example/app/src/main/res/values/strings.xml
+++ b/pinpad/hub-core-pinpad-complete-example/app/src/main/res/values/strings.xml
@@ -7,6 +7,16 @@
     <string name="device_type">Tipo de Dispositivo</string>
     <!--####################################-->
 
+    <!--Scope Settings Related-->
+    <string name="scope_settings_title">Configurações SCOPE</string>
+    <string name="scope_ip">IP do servidor Scope</string>
+    <string name="scope_port">Porta do servidor Scope</string>
+    <string name="scope_company_code">Código da empresa</string>
+    <string name="scope_company_branch">Filial da empresa</string>
+    <string name="scope_terminal_code">Código do terminal</string>
+    <string name="scope_pinpad">Pinpad</string>
+    <!--####################################-->
+
     <!--Sitef Settings Related-->
     <string name="sitef_settings_title">Configurações SITEF</string>
     <string name="sitef_ip">IP do servidor sitef</string>
@@ -14,9 +24,10 @@
     <string name="sitef_company_code">Código da Empresa</string>
     <string name="sitef_terminal_code">Código do terminal</string>
     <string name="sitef_pinpad">Pinpad</string>
+    <!--####################################-->
+
     <string name="next">Próximo</string>
     <string name="save">Salvar</string>
-    <!--####################################-->
 
     <!--Transaction Related-->
     <string name="transaction_value">Valor da transação</string>
