--- a/pdv-pinpad/hub-pinpad-pdv-example/app/src/main/res/values/strings.xml
+++ b/pdv-pinpad/hub-pinpad-pdv-example/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Hub Core Pinpad PDV Example</string>
+    <string name="app_name">Hub Pinpad PDV Example</string>
 
     <!--Settings Related-->
     <string name="goto_settings">Ir para Configurações</string>
     <string name="settings">Configurações</string>
-    <string name="device_type">Tipo de Dispositivo</string>
+    <string name="payment_provider">Provedor de Pagamentos</string>
     <!--####################################-->
 
     <!--Sitef Settings Related-->
