--- a/simple-example/app/src/main/res/values/strings.xml
+++ b/simple-example/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Hub Core Pinpad Simple Example</string>
+    <string name="app_name">Hub Simple Example</string>
 </resources>
