--- a/hub-complete-pos-example/app/src/main/res/values/strings.xml
+++ b/hub-complete-pos-example/app/src/main/res/values/strings.xml
@@ -37,10 +37,9 @@
     <string name="start_refund">Iniciar Estorno</string>
     <string name="installment_type">Tipo de parcelamento</string>
     <string name="manual_transaction">Realizar Transação</string>
-    <string name="manual_refund">Estornar Última Transação</string>
+    <string name="manual_refund">Estornar Transação</string>
     <!--Refund Related-->
-    <string name="transaction_id">ID da transação</string>
-    <string name="transaction_timestamp">Timestamp da transação</string>
+    <string name="refund">Estornar</string>
     <!--####################################-->
 
 </resources>
