Ajsutando app de exemplo pos, para realizar login e enviar novo parametro de autenticação na transação

--- a/hub-complete-pos-example/app/src/main/res/values/strings.xml
+++ b/hub-complete-pos-example/app/src/main/res/values/strings.xml
@@ -40,6 +40,10 @@
     <string name="manual_refund">Estornar Transação</string>
     <!--Refund Related-->
     <string name="refund">Estornar</string>
+    <!--    Login-->
+    <string name="login">Login</string>
+    <string name="password">Senha</string>
+
     <!--####################################-->
 
 </resources>
